# r-machine

./: .cproject  .project  CMakeLists.txt  README.md  README_zh.md
bison-flex/: parser_bison.c  parser_bison.h  parser_flex.c  parser_flex.h
example/: bool.r
include/: r_machine.h
src/: logic_sentence.c  propositional_logic.c  r_internal.c  r_internal.h  r_machine.c  r_machine.h
src/exe/: main.c
src/parser/: parser.c  parser.h  parser.l  parser.y  parser_bison.c  parser_bison.h  parser_flex.c  parser_flex.h  parser_impl.c  parser_internal.c  parser_internal.h
tests/: CMakeLists.txt  test_logic_sentence.c  test_propositional_logic.c  test_r_machine.c
tests/boolean/: test_calculate.c  test_convert.c  test_parse_print.c
